# price-collector

./: Cargo.toml  Dockerfile  LICENSE  README.md  coins.json  coins.toml
.github/workflows/: docker.yml
src/: api.rs  coin.rs  datapoint.rs  discrepancies.rs  fixes.rs  interpolate.rs  main.rs  price.rs
