[package]
name = "price-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
const_format = "0.2.32"
dotenvy = "0.15.7"
ethers = { version = "2.0.11", features = ["abigen-online"] }
eyre = "0.6.11"
futures = "0.3.30"
hhmmss = "0.1.0"
redis = "0.24.0"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
shared = { git = "https://github.com/auto-trading-temp-name/shared-rust.git", rev = "351e8cf" }
tracing-bunyan-formatter = "0.3.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-panic = "0.1.1"
