[package]
name = "price-collector"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
const_format = "0.2.32"
dotenvy = "0.15.7"
ethers = { version = "2.0.11", features = ["abigen-online"] }
eyre = "0.6.11"
futures = "0.3.30"
hhmmss = "0.1.0"
redis = "0.24.0"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
shared = { git = "https://github.com/tetrahedral-tech/shared-rust.git" }
tracing-bunyan-formatter = "0.3.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-panic = "0.1.1"
lazy_static = "1.4.0"
rug = "1.24.0"
actix-web = "4.5.1"
